Fix design accessibility color contrast issue. Closes #385

--- a/resources/assets/sass/shared/colors.scss
+++ b/resources/assets/sass/shared/colors.scss
@@ -49,4 +49,4 @@ $a-rose-poudre: #d9857a;
 $a-dark-bg: #0d0d0d;
 $a-bleu-fonce: #3338ba;
 $a-or-fond-clair: #b86e00;
-$a-or-fond-noir: #dda34c;
+$a-or-fond-noir: #cf9948;
